--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,12 +4,15 @@
   "version": "0.1",
   "manifest_version": 2,
   "content_scripts": [{
-    "matches": ["https://lec.medilink-study.com/front/video/view/*"],
-    "js": ["jquery-3.5.1.min.js", "ChEx.js", "content_script.js"]
+    "matches": ["https://lec.medilink-study.com/front/video/view/*", "https://www.videog.jp/player/*"],
+    "js": ["jquery-3.5.1.min.js", "ChEx.js", "content_script.js"],
+    "run_at": "document_end",
+    "all_frames": true
   }],
   "options_page": "options.html",
   "permissions": [
     "https://lec.medilink-study.com/front/video/view/*",
+    "https://www.videog.jp/player/*",
     "storage"
   ]
 }
